k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-clusterip
  labels:
    app: httpbin
    component: service
spec:
  type: ClusterIP
  ports:
  # The port that the service is listening on.
  - name: http
    port: 80
    targetPort: 80
  #- name: https
  #  port: 443
  #  targetPort: 443
  selector:
    app: httpbin
